--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/sushantkadam15/foodBucket#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "mongoose": "^6.5.4"
+    "mongoose": "^6.5.4",
+    "node-fetch": "^3.2.10"
   }
 }
