--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.27.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "method-override": "^3.0.0",
     "mongoose": "^6.5.4",
     "node-fetch": "^3.2.10"
   }
