--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.5.4",
+    "morgan": "^1.10.0",
     "node-fetch": "^3.2.10"
   }
 }
