--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
   },
   "homepage": "https://github.com/sushantkadam15/foodBucket#readme",
   "dependencies": {
-    "axios": "^0.27.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "joi": "^17.6.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.5.4",
-    "morgan": "^1.10.0",
-    "node-fetch": "^3.2.10"
+    "morgan": "^1.10.0"
   }
 }
