--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # Icon must end with two \r
 Icon
 
+# Authentication file # 
+databaseAuthentication.js
+
 
 # Thumbnails
 ._*
@@ -30,6 +33,8 @@ Temporary Items
 ### macOS Patch ###
 # iCloud generated files
 *.icloud
+
+
 
 ### Node ###
 # Logs
